k8s-local/manifests/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: demo
spec:
  selector:
    app: server
  ports:
    - port: 80
      targetPort: 8000
