k8s-local/manifests/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ing
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
    - host: my.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 80
